--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 header{
-    background-image:url('/images/image5.jpg');
+    background-image:url('../images/image5.jpg');
     background-repeat:no-repeat;
     background-attachment: fixed;
     background-size:cover;
@@ -48,7 +48,7 @@ section.section-back {
 
 
 .who-image {
-    background-image:url('/images/image2.jpg');
+    background-image:url('../images/image2.jpg');
     background-repeat:no-repeat;
     background-size:60%;
     background-position:center center;
@@ -56,7 +56,7 @@ section.section-back {
 }
 
 .parax{
-    background-image:url('/images/image1.jpg');
+    background-image:url('../images/image1.jpg');
     background-repeat:no-repeat;
     background-attachment: fixed;
     height:400px;
