--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 header{
-    background-image:url('../images/image5.jpg');
+    background-image:url('/images/image1.jpg');
     background-repeat:no-repeat;
     background-attachment: fixed;
     background-size:cover;
@@ -10,6 +10,16 @@ body{
     font-family: 'Roboto', sans-serif;
 }
 
+img.logo {
+    max-width: 229px;
+    width: 100#;
+    width: 100%;
+}
+
+nav a {
+    color: #000 !important;
+    font-weight:bold;
+}
 
 span.slogan {
     position: absolute;
@@ -48,7 +58,7 @@ section.section-back {
 
 
 .who-image {
-    background-image:url('../images/image2.jpg');
+    background-image:url('/images/image2.jpg');
     background-repeat:no-repeat;
     background-size:60%;
     background-position:center center;
@@ -56,7 +66,7 @@ section.section-back {
 }
 
 .parax{
-    background-image:url('../images/image1.jpg');
+    background-image:url('/images/image7.jpg');
     background-repeat:no-repeat;
     background-attachment: fixed;
     height:400px;
@@ -90,11 +100,7 @@ span.parax-slogan {
     font-weight:bold;
 }
 
-.fab {
-    font-size: 50px;
-    color: #ff5951;
-    text-shadow: 2px 2px 2px #000;
-}
+ 
 
 
 @media only screen and (max-width : 1366px) {
