--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 header{
-    background-image:url('../images/image1.jpg');
+    background-image:url('/images/image1.jpg');
     background-repeat:no-repeat;
     background-attachment: fixed;
     background-size:cover;
