--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 header{
-    background-image:url('/images/image1.jpg');
+    background-image:url('../images/image1.jpg');
     background-repeat:no-repeat;
     background-attachment: fixed;
     background-size:cover;
@@ -7,7 +7,7 @@ header{
 }
 
 .subpage{
-    background-image:url('/images/image6.jpg');
+    background-image:url('../images/image6.jpg');
     background-repeat:no-repeat;
     background-attachment: fixed;
     background-size:cover;
@@ -79,7 +79,7 @@ section.section-back {
 
 
 .who-image {
-    background-image:url('/images/image2.jpg');
+    background-image:url('../images/image2.jpg');
     background-repeat:no-repeat;
     background-size:60%;
     background-position:center center;
@@ -87,7 +87,7 @@ section.section-back {
 }
 
 .parax{
-    background-image:url('/images/image7.jpg');
+    background-image:url('../images/image7.jpg');
     background-repeat:no-repeat;
     background-attachment: fixed;
     height:400px;
@@ -98,7 +98,7 @@ section.section-back {
 
 
 .parax-sub{
-    background-image:url('/images/pencil-book.jpg');
+    background-image:url('../images/pencil-book.jpg');
     background-repeat:no-repeat;
     background-attachment: fixed;
     height:280px;
