--- a/css/style.css
+++ b/css/style.css
@@ -37,14 +37,14 @@ nav a {
     display:block !important;
 }
 
-span.slogan {
+span.slogan2 {
     position: absolute;
     text-align: center;
     width: 100%;
     margin: 0 auto;
     color: #fff;
     font-size: 2.5rem;
-    top: 54%;
+    top: 33%;
     background: #00000080;
     /*font-family: 'Dancing Script', cursive !important;*/
 }
